--- a/SignalTest/SignalTest.csproj
+++ b/SignalTest/SignalTest.csproj
@@ -45,6 +45,7 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AGC.cs" />
     <Compile Include="BiQuadraticFilter.cs" />
     <Compile Include="Constellation.cs" />
     <Compile Include="Costas.cs" />
