Add adaptive channel equalizer using (N)LMS algorithm
Add AGC output clamping

--- a/SignalTest/SignalTest.csproj
+++ b/SignalTest/SignalTest.csproj
@@ -47,6 +47,7 @@
   <ItemGroup>
     <Compile Include="AGC.cs" />
     <Compile Include="BiQuadraticFilter.cs" />
+    <Compile Include="ChannelEqualizer.cs" />
     <Compile Include="Constellation.cs" />
     <Compile Include="Costas.cs" />
     <Compile Include="Downsampler.cs" />
