Add scrambler and pseudo-random number generator
Add self-synchronizing scrambler using the V.34 polynomial
Add xorshift pseudo-random number generator
Decision-directed demodulator: Switch to using a known pseudo-random training sequence for channel estimation, as this provides a more accurate estimate of the channel response

--- a/SignalTest/SignalTest.csproj
+++ b/SignalTest/SignalTest.csproj
@@ -55,7 +55,9 @@
     <Compile Include="Integrator.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="PseudoRandom.cs" />
     <Compile Include="RootRaisedCosineFilter.cs" />
+    <Compile Include="Scrambler.cs" />
     <Compile Include="Vco.cs" />
   </ItemGroup>
   <ItemGroup>
