--- a/SignalTest/SignalTest.csproj
+++ b/SignalTest/SignalTest.csproj
@@ -53,6 +53,7 @@
     <Compile Include="Downsampler.cs" />
     <Compile Include="Gardner.cs" />
     <Compile Include="Integrator.cs" />
+    <Compile Include="PLL.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="PseudoRandom.cs" />
